# kernelpp

./: .gitmodules  CMakeLists.txt  README.md
include/kernelpp/: avx_util.h  config.h.in  cuda_util.h  device_util-inl.cuh  device_util.h  kernel.h  kernel_invoke.h  types.h
src/: lib.cpp  lib.cu
test/: CMakeLists.txt  lib_test.cpp
